/*
 * Ouroboros - Copyright (C) 2016 - 2017
 *
 * Message for setting Protocol information in CACEP
 *
 *    Dimitri Staessens <dimitri.staessens@ugent.be>
 *    Sander Vrijders   <sander.vrijders@ugent.be>
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public License
 * version 2.1 as published by the Free Software Foundation.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
 * 02110-1301 USA
 */

syntax = "proto2";

enum proto_concrete_syntax_code {
        GPB   = 1;
        ASN_1 = 2;
        FIXED = 3;
}

message cacep_proto_msg {
        required string protocol                        = 1;
        required int32 pref_version                     = 2;
        repeated int32 supp_version                     = 3;
        required proto_concrete_syntax_code pref_syntax = 4;
        repeated proto_concrete_syntax_code supp_syntax = 5;
}
